Fix width of page on smaller screens, fix position of user credit for a place

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -161,3 +161,12 @@ blockquote footer:before {
 .dark-grey-text {
   color: #4e4e4e;
 }
+
+.clear {
+  clear: both;
+}
+
+.bottom-0 {
+  position: absolute;
+  bottom: 0;
+}
